--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,44 @@
 # Placeholders batch.*
 #    for H2:
-batch.jdbc.driver=org.h2.Driver
-batch.jdbc.url=jdbc:h2:file:target/data/h2
-batch.jdbc.user=sa
-batch.jdbc.password=
-batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.H2SequenceMaxValueIncrementer
-batch.schema.script=classpath:/scripts/h2.sql
-batch.drop.script=classpath:/scripts/drop-h2.sql
+#batch.jdbc.driver=org.h2.Driver
+#batch.jdbc.url=jdbc:h2:file:target/data/h2
+#batch.jdbc.user=sa
+#batch.jdbc.password=
+#batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.H2SequenceMaxValueIncrementer
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+# OracleDB connection settings
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=spring
+spring.datasource.password=733515
+
+
+# HikariCP settings
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPoolBooks
+
+# JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto=create
+
+spring.batch.initialize-schema=always
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+#spring.jpa.properties.hibernate.generate_statistics=true
+
 batch.jdbc.testWhileIdle=true
 batch.jdbc.validationQuery=
-
 spring.batch.job.enabled=false
 
 
