Alteracao layout arquivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@
 
 # OracleDB connection settings
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-spring.datasource.username=spring
-spring.datasource.password=733515
+spring.datasource.url=jdbc:oracle:thin:@10.129.195.104:1521:GFDASHQA
+spring.datasource.username=openrisow
+spring.datasource.password=Viv0#202l
 
 
 # HikariCP settings
