--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.java linguist-detectable=true
+*.js linguist-detectable=false
 *.html linguist-detectable=false
-* linguist-vendored
-*.js linguist-vendored=false
+*.xml linguist-detectable=false
